// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webform checkboxes 1`] = `
<form
  className="my-form"
  data-webform-id="contact"
  onSubmit={[Function]}
  style={
    Object {
      "color": "black",
    }
  }
>
  <div
    className="form-group form-check"
  >
    <input
      className="form-check-input"
      defaultChecked={false}
      id="form-tos"
      name="tos"
      type="checkbox"
    />
    <label
      htmlFor="form-tos"
    >
      Agree terms of service
    </label>
  </div>
  <div
    className="form-group"
  >
    <label>
      Select your favourite color
    </label>
    <div
      className="form-check"
    >
      <input
        className="form-check-input"
        defaultChecked={false}
        id="form-favourite-color-#ff69b4"
        name="favourite_color"
        type="radio"
        value="#ff69b4"
      />
      <label
        className="form-check-label"
        htmlFor="form-favourite-color-#ff69b4"
      >
        Hotpink
      </label>
    </div>
    <div
      className="form-check"
    >
      <input
        className="form-check-input"
        defaultChecked={false}
        id="form-favourite-color-#808000"
        name="favourite_color"
        type="radio"
        value="#808000"
      />
      <label
        className="form-check-label"
        htmlFor="form-favourite-color-#808000"
      >
        Olive
      </label>
    </div>
    <div
      className="form-check"
    >
      <input
        className="form-check-input"
        defaultChecked={false}
        id="form-favourite-color-#6495ed"
        name="favourite_color"
        type="radio"
        value="#6495ed"
      />
      <label
        className="form-check-label"
        htmlFor="form-favourite-color-#6495ed"
      >
        Cornflower blue
      </label>
    </div>
  </div>
  <button
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Webform contact form renders correctly 1`] = `
<form
  className="my-form"
  data-webform-id="contact"
  onSubmit={[Function]}
  style={
    Object {
      "color": "black",
    }
  }
>
  <div
    className="form-group"
  >
    <label
      htmlFor="form-name"
    >
      Your Name
    </label>
    <input
      className="form-control"
      defaultValue="John"
      id="form-name"
      name="name"
      required="true"
      type="text"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="form-email"
    >
      Your Email
    </label>
    <input
      className="form-control"
      defaultValue="john@example.com"
      id="form-email"
      name="email"
      required="true"
      type="email"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="form-subject"
    >
      Subject
    </label>
    <input
      className="form-control"
      id="form-subject"
      name="subject"
      required="true"
      type="email"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="form-message"
    >
      Subject
    </label>
    <textarea
      className="form-control"
      id="form-message"
      name="message"
      required="true"
    />
  </div>
  <div
    className="form-group"
  >
    <button
      type="submit"
    >
      Send message
    </button>
  </div>
</form>
`;

exports[`Webform hidden inputs 1`] = `
<form
  className="my-form"
  data-webform-id="contact"
  onSubmit={[Function]}
  style={
    Object {
      "color": "black",
    }
  }
>
  <input
    className="form-control"
    id="form-name"
    name="name"
    type="hidden"
  />
  <button
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Webform title attributes 1`] = `
<form
  className="my-form"
  data-webform-id="contact"
  onSubmit={[Function]}
  style={
    Object {
      "color": "black",
    }
  }
>
  <div
    className="form-group"
  >
    <label
      htmlFor="form-name"
      style={
        Object {
          "clip": "rect(1px,1px,1px,1px)",
          "height": "1px",
          "overflow": "hidden",
          "position": "absolute",
          "width": "1px",
          "wordWrap": "normal",
        }
      }
    >
      Your Name
    </label>
    <input
      className="form-control"
      id="form-name"
      name="name"
      type="text"
    />
  </div>
  <button
    type="submit"
  >
    Submit
  </button>
</form>
`;
